# projeto-arquitetura1

./: .pre-commit-config.yaml  .sqlfluff  pyproject.toml
dbt-core/: .user.yml  profiles.yml
