[project]
name = "projeto-arquitetura"
version = "0.1.0"
description = ""
authors = [
    {name = "Davi",email = "davifpereira@yahoo.com.br"}
]
readme = "README.md"

requires-python = ">=3.12,<4.0"

dependencies = [
    "poetry-plugin-dotenv (>=2.9.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_arquitetura", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
