[project]
name = "projeto-arquitetura"
version = "0.1.0"
description = ""
authors = [
    {name = "Davi",email = "davifpereira@yahoo.com.br"}
]
readme = "README.md"

requires-python = ">=3.12,<4.0"

dependencies = [
    "poetry-plugin-dotenv (>=2.9.0,<3.0.0)",
    "dbt-core (>=1.9.4,<2.0.0)",
    "dbt-bigquery (>=1.9.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_arquitetura", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
sqlfluff = "^3.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []